@@ -1,3 +1,8 @@
+Fri Dec  6 19:33:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* class.c (rb_extract_keywords, rb_get_kwargs): move from
+	  vm_insnhelper.c.
+
 Fri Dec  6 19:18:02 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: change oldmalloc meaning.
